# BCG_GenAI_The_Forage

./: 03_Task_2_Instructions.html  03_Task_2_Instructions.md  index.html  index.html.md  inspecting_sec_edgar_data.html  inspecting_sec_edgar_data.html.md  load_financial_data.html  load_financial_data.html.md  pyproject.toml  requirements.txt  robots.txt  scrap_edgar_data.html  scrap_edgar_data.html.md  search.json  settings.ini  sitemap.xml  task_2_chatbot_prototype.html  task_2_chatbot_prototype.html.md  task_2_solution_in_the_platform.html  task_2_solution_in_the_platform.html.md
BCG_GenAI_The_Forage/: _modidx.py  chatbot.py  tools.py
nbs/: 00_scrap_EDGAR_data.ipynb  01_Inspecting_SEC_EDGAR_data.ipynb  02_Load_financial_data.ipynb  03_Task_2_Instructions.ipynb  04_Task_2_chatbot_prototype.ipynb  04_Task_2_solution_in_the_platform.ipynb  index.ipynb  nbdev.yml  pyproject.toml
resources/: financial_data.csv  financial_data_chatbot.csv
