[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BCG_GenAI_financial_jobsim"
version = "0.1.0"
description = "Repo where we will implement an AI chatbot trained with financial data obtained through scrapping"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "nbs",
]
